--- a/templates/category.html
+++ b/templates/category.html
@@ -13,6 +13,8 @@
 
 <div class="col-xs-12 col-sm-8 primary_column">
 
+<h5>{{ selected_category.title }}</h5>
+
 {% for post in posts %}
 <div class="row">
 <div class="col-xs-12">
